<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="ru.electric.ec.online.ui.enter.EnterViewModel" />
    </data>
    <LinearLayout
        tools:ignore="UseCompoundDrawables"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/logo"
            style="@style/AppTheme.ECOnline.Logo"
            android:layout_weight="1"
            android:src="@drawable/splash"
            tools:ignore="ContentDescription" android:layout_height="0dp"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/editLogin"
            style="@style/AppTheme.ECOnline.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_login"
            android:inputType="textPersonName"
            android:text="@={viewModel.login}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/AppTheme.ECOnline.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/checkSave"
            style="@style/AppTheme.ECOnline.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.save}"
            android:onClick="@{()->viewModel.onSave()}"
            android:text="@string/text_save_login"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/buttonEnter"
            style="@style/AppTheme.ECOnline.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->viewModel.onEnter(context)}"
            android:text="@string/button_enter" />

        <TextView
            android:id="@+id/textEnter"
            style="@style/AppTheme.ECOnline.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="@{()->viewModel.onPhone(context, @string/text_phone)}"
            android:text="@{@string/text_ender(@string/text_phone)}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </LinearLayout>
</layout>